<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_background"
    android:orientation="vertical"
    tools:context=".activity.Profile_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/txt_profile_image_name"
            android:textAlignment="center"
            android:textColor="@color/black_chat"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/img_civ_profile"
                android:layout_width="125dp"
                android:layout_height="125dp"
                android:src="@drawable/profile"
                app:civ_border_color="@color/img_border"
                app:civ_border_width="1.5dp" />

            <ImageView
                android:id="@+id/img_edit"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_marginHorizontal="50dp"
                android:layout_marginTop="110dp"
                android:src="@drawable/ig_edit_logo" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/txt_profile"
            android:textAlignment="center"
            android:textColor="@color/black_chat"
            android:textSize="16sp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="22dp"
            android:background="@drawable/rectangle_shape_line">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:fontFamily="@font/rubik_regular"
                android:hint="@string/txt_name"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:maxLength="25"
                android:paddingHorizontal="10dp"
                android:singleLine="true"
                android:textColor="@color/black_chat"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_name_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:fontFamily="@font/rubik_regular"
                android:paddingEnd="10dp"
                android:text="25"
                android:textColor="@color/black_chat"
                android:textSize="16sp" />

        </RelativeLayout>

        <TextView
            android:layout_width="185dp"
            android:layout_height="36dp"
            android:fontFamily="@font/rubik_regular"
            android:text="@string/txt_please_provide_details"
            android:textAlignment="center"
            android:textColor="@color/black_chat"
            android:textSize="14sp" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="15dp"
            android:gravity="center_horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next_profile"
                android:layout_width="286dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:backgroundTint="@color/black_chat"
                android:background="@drawable/rectangle_shape"
                android:fontFamily="@font/rubik_medium"
                android:text="@string/btn_txt_next"
                android:layout_marginBottom="15dp"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22sp" />
        </RelativeLayout>

    </LinearLayout>

</LinearLayout>