<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_background"
    tools:context=".activity.SplashScreen">
    
    <TextView
        android:id="@+id/txt_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/_22ssp"
        android:textColor="@color/black_chat"
        android:fontFamily="@font/rubik_bold"
        android:text="@string/wel_come"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="80dp"/>

    <TextView
        android:id="@+id/txt_privacy_condition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/privacy_service"
        app:layout_constraintTop_toBottomOf="@+id/txt_welcome"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/rubik_medium"
        android:textSize="@dimen/_11ssp"
        android:layout_marginHorizontal="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ig_Logo"
        android:layout_width="match_parent"
        android:layout_height="356dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_privacy_condition"
        android:src="@drawable/ig_splash_logo"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rectangle_shape"
        android:backgroundTint="@color/black_chat"
        android:fontFamily="@font/rubik_medium"
        android:text="@string/conti_nue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>