<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_background"
    tools:context=".activity.RegistrationActivity">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/mobileNumber"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/mobile_num"
        android:gravity="center"
        android:textSize="24dp"
        android:fontFamily="@font/rubik_bold"
        android:textColor="@color/black_chat"
        android:layout_marginTop="80dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/verifyNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black_chat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="22dp"
        android:text="@string/verify_mobile_num"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:gravity="center"
        android:fontFamily="@font/rubik_medium"
        app:layout_constraintTop_toBottomOf="@+id/mobileNumber"/>

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="22dp"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/verifyNumber"
        android:background="@drawable/rectangle_shape_line">


        <TextView
            android:id="@+id/txtselectcountry"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="2dp"
            android:text="@string/txt_select_country"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black_chat"
            android:fontFamily="@font/rubik_medium"
            android:textSize="16sp"/>

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAlignment="center"
            android:dropDownWidth="300dp"
            android:minHeight="85dp"
            android:dropDownVerticalOffset="55dp"
            android:spinnerMode="dropdown"
            android:backgroundTint="@color/black_chat"
            android:dropDownHeight="50dp">

        </androidx.appcompat.widget.AppCompatSpinner>

    </RelativeLayout>

    <TextView
        android:id="@+id/txtcountrycode"
        android:layout_width="65dp"
        android:layout_height="42dp"
        android:textColor="@color/black"
        android:fontFamily="@font/rubik_regular"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="16dp"
        android:layout_marginHorizontal="22dp"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/hint_num"
        app:layout_constraintTop_toBottomOf="@+id/relative"
        android:background="@drawable/rectangle_shape_line"/>

    <EditText
        android:id="@+id/et_mobile_number"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rectangle_shape_line"
        android:fontFamily="@font/rubik_regular"
        android:gravity="center_vertical"
        android:textSize="16dp"
        android:inputType="number"
        android:maxLength="10"
        android:hint="@string/hint_mobile_number"
        android:textColor="@color/dark_white"
        android:paddingStart="15dp"
        android:layout_marginHorizontal="22dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtcountrycode"
        app:layout_constraintTop_toBottomOf="@+id/relative"
        />
    <TextView
        android:id="@+id/error_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginStart="5dp"
        app:layout_constraintTop_toBottomOf="@+id/et_mobile_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="please enter mobile no"
        android:textColor="@color/red" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_txt_next"
        android:textAllCaps="false"
        android:fontFamily="@font/rubik_medium"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/black_chat"
        android:background="@drawable/rectangle_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:textSize="22dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/white"/>

<!--        <TextView-->
<!--        android:id="@+id/error_mobile"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_alignParentRight="true"-->
<!--        android:layout_marginStart="5dp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginEnd="@dimen/_15sdp"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/et_mobile_number"-->
<!--        android:text="please enter mobile no"-->
<!--        android:textColor="@color/red" />-->


</androidx.constraintlayout.widget.ConstraintLayout>