<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/chat_background"
    tools:context=".activity.Splash_Activity">
    
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/chatt_logo"
        android:layout_width="305dp"
        android:layout_height="334dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/ig_splash_logo"
        android:layout_marginTop="70dp"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_chat_name"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:text="@string/chat_name"
        app:layout_constraintTop_toBottomOf="@+id/chatt_logo"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="24dp"
        android:gravity="center"
        android:textColor="@color/black_chat"
        android:fontFamily="@font/rubik_bold"
        android:layout_marginTop="@dimen/_21sdp"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_intro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:text="@string/intro_chatty"
        android:textColor="@color/black_chat"
        android:textSize="14dp"
        android:layout_marginHorizontal="35dp"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/txt_chat_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/getStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/rectangle_shape"
        android:text="@string/get_start"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:backgroundTint="@color/black_chat"
        android:fontFamily="@font/rubik_medium"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>