<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/rectangle_shape_line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_image_upload"
                android:fontFamily="@font/rubik_bold"/>

            <TextView
                android:id="@+id/txt_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:drawableEnd="@drawable/close" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_142sdp"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:id="@+id/lin_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="0.5">

                <ImageView
                    android:id="@+id/img_camera"
                    android:layout_width="wrap_content"
                    android:layout_height="145dp"
                    android:src="@drawable/camera"/>

                <Button
                    android:id="@+id/btn_camera"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:textColor="@color/black_chat"
                    android:text="@string/btn_txt_camera"
                    android:textSize="13sp"
                    android:layout_marginHorizontal="5dp"
                    android:fontFamily="@font/rubik_medium"
                    android:backgroundTint="@color/btn_bg"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_gallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="0.5">

                <ImageView
                    android:id="@+id/img_gallery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/gallery"/>

                <Button
                    android:id="@+id/btn_gallery"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:text="@string/btn_txt_gallery"
                    android:textColor="@color/black_chat"
                    android:textSize="13sp"
                    android:layout_marginHorizontal="5dp"
                    android:fontFamily="@font/rubik_medium"
                    android:backgroundTint="@color/btn_bg"
                    android:textAllCaps="false"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_img_"
            android:layout_margin="30dp"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp"
            android:textColor="@color/black_chat"
            android:fontFamily="@font/rubik_medium"
            android:textAlignment="center"/>


        </LinearLayout>


</LinearLayout>