<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/chat_background"
    tools:context=".activity.Otp_Verification">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_bold"
            android:text="@string/txt_verify_mobile_number"
            android:textAlignment="center"
            android:textColor="@color/black_chat"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="331dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txt_verify_mobile_details"
            android:textColor="@color/black_chat"
            android:fontFamily="@font/rubik_medium"
            android:textAlignment="center"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/txt_edit_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_edit_number"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            android:fontFamily="@font/rubik_medium"/>

        <LinearLayout
            android:id="@+id/linear_Otp"
            android:layout_width="260dp"
            android:layout_height="45dp"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et1"
                android:layout_width="40dp"
                android:layout_height="42dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="8dp"
                android:fontFamily="@font/rubik_bold"
                android:background="@drawable/bg_verify_code"
                android:gravity="center"
                android:textIsSelectable="false"
                android:maxLength="1"
                android:maxLines="1"
                android:imeOptions="actionNone"
                android:inputType="number" />

            <EditText
                android:id="@+id/et2"
                android:layout_width="40dp"
                android:layout_height="42dp"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:maxLength="1"
                android:maxLines="1"
                android:imeOptions="actionNone"
                android:textIsSelectable="false"
                android:fontFamily="@font/rubik_bold"
                android:background="@drawable/bg_verify_code"
                android:gravity="center"
                android:inputType="number" />

            <EditText
                android:id="@+id/et3"
                android:layout_width="40dp"
                android:layout_height="42dp"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:maxLength="1"
                android:maxLines="1"
                android:imeOptions="actionNone"
                android:background="@drawable/bg_verify_code"
                android:gravity="center"
                android:textIsSelectable="false"
                android:fontFamily="@font/rubik_bold"
                android:inputType="number" />

            <EditText
                android:id="@+id/et4"
                android:layout_width="40dp"
                android:layout_height="42dp"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:maxLength="1"
                android:maxLines="1"
                android:imeOptions="actionNone"
                android:textIsSelectable="false"
                android:fontFamily="@font/rubik_bold"
                android:background="@drawable/bg_verify_code"
                android:gravity="center"
                android:inputType="number" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txt_enter_digit_otp"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textColor="@color/black_chat"
            android:fontFamily="@font/rubik_regular" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_resend_otp"
                android:textColor="@color/black_chat"
                android:textSize="15sp"
                android:gravity="center"
                android:clickable="false"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/rubik_regular" />

            <TextView
                android:id="@+id/txt_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginHorizontal="10dp"
                android:textAlignment="textEnd"
                android:textColor="@color/dark_blue"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_verify"
                android:layout_width="286dp"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:backgroundTint="@color/black_chat"
                android:fontFamily="@font/rubik_medium"
                android:background="@drawable/rectangle_shape"
                android:text="@string/txt_verify"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="22sp" />

        </RelativeLayout>


    </LinearLayout>

</LinearLayout>

